# ERDOS

./: CMakeLists.txt  Makefile  README.md  bb_covering_tree.cpp  bb_covering_tree.h  cc_embedded_graph.cpp  cc_embedded_graph.h  edgecode.cpp  edgecode.h  erdos.cpp  find_a_trail.cpp  find_a_trail.h  make_cc.cpp  make_cc.h  ply_to_embedding.cpp  ply_to_embedding.h  tetrahedron.ply
